# uba-mn

./: README.md
Trabajos prácticos/TP1/TP1/: main.py
Trabajos prácticos/TP2/TP2/: Auxiliares.py  CMakeCache.txt  CMakeLists.txt  ECM.py  EJ_1B.py  EJ_2A.py  EJ_2B.py  EJ_2C.py  EJ_2D.py  EJ_3A.py  EJ_3B.py  EJ_3C.py  EJ_3D.py  Makefile  Matriz_Similaridad.py  PCA.py  README.txt  Test1_1B.txt  Test2_1B.txt  Test3_1B.txt  Test4_1B.txt  Test5_1B.txt  Test6_1B.txt  Test7_1B.txt  Test8_1B.txt  TwoDPCA.py  cmake_install.cmake  graficos_1b.py  main  main.cpp  main.py  metodoPotDef.cpp  metodoPotDef.h  run
Trabajos prácticos/TP2/TP2/caras/s1/: 1.pgm  10.pgm  2.pgm  3.pgm  4.pgm  5.pgm  6.pgm  7.pgm  8.pgm  9.pgm
Trabajos prácticos/TP2/TP2/main 2.dSYM/Contents/Resources/DWARF/: main
Trabajos prácticos/TP2/TP2/main.dSYM/Contents/Resources/DWARF/: main
Trabajos prácticos/TP3/TP3/: Archivos.cpp  Archivos.h  Auxiliares.cpp  Auxiliares.h  CMakeLists.txt  DLU.cpp  DLU.h  Experimentacion.cpp  Experimentacion.h  GAUSS-SEIDEL.cpp  GAUSS-SEIDEL.h  JACOBI.cpp  JACOBI.h  LU.cpp  LU.h  README  boxplots.py  graficos.py  graficos_XMult.py  graficos_particulares.py  main  main.cpp  main.py
